--- a/src/portfolio-web/src/app/shared/components/language-switcher/language-switcher.html
+++ b/src/portfolio-web/src/app/shared/components/language-switcher/language-switcher.html
@@ -10,7 +10,10 @@
     <button mat-menu-item
       (click)="setLanguage(lang)"
       [disabled]="getActiveLanguage() === lang" >
-      {{ lang.getFlag() }} {{ lang.getName() }}
+      <mat-grid-list cols="4">
+        <mat-grid-tile [colspan]="1" [rowspan]="1" class="flag">{{ lang.getFlag() }}</mat-grid-tile>
+        <mat-grid-tile [colspan]="3" [rowspan]="1">{{ lang.getName() }}</mat-grid-tile>
+      </mat-grid-list>
     </button>
   } @empty {
     <button mat-menu-item disabled>No languages available</button>
