--- a/src/portfolio-web/src/app/shared/components/language-switcher/language-switcher.html
+++ b/src/portfolio-web/src/app/shared/components/language-switcher/language-switcher.html
@@ -6,7 +6,7 @@
 </button>
 <!-- Menu -->
 <mat-menu #menu="matMenu">
-  @for (lang of languageList; track lang.getId()) {
+  @for (lang of getLanguageList(); track lang.getId()) {
     <button mat-menu-item
       (click)="setLanguage(lang)"
       [disabled]="getActiveLanguage() === lang" >
