--- a/documents/compodoc/components/LanguageSwitcher.html
+++ b/documents/compodoc/components/LanguageSwitcher.html
@@ -204,10 +204,6 @@ from the list of available languages.</p>
                                     <span class="modifier">Protected</span>
                                 <a href="#label" >label</a>
                             </li>
-                            <li>
-                                    <span class="modifier">Protected</span>
-                                <a href="#languageList" >languageList</a>
-                            </li>
                         </ul>
                     </td>
                 </tr>
@@ -223,6 +219,10 @@ from the list of available languages.</p>
                             <li>
                                     <span class="modifier">Public</span>
                                 <a href="#getActiveLanguage" >getActiveLanguage</a>
+                            </li>
+                            <li>
+                                    <span class="modifier">Public</span>
+                                <a href="#getLanguageList" >getLanguageList</a>
                             </li>
                             <li>
                                     <span class="modifier">Public</span>
@@ -251,7 +251,7 @@ from the list of available languages.</p>
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="38" class="link-to-prism">src/app/shared/components/language-switcher/language-switcher.ts:38</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/app/shared/components/language-switcher/language-switcher.ts:31</a></div>
                             </td>
                         </tr>
 
@@ -329,8 +329,8 @@ from the list of available languages.</p>
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="55"
-                                    class="link-to-prism">src/app/shared/components/language-switcher/language-switcher.ts:55</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="47"
+                                    class="link-to-prism">src/app/shared/components/language-switcher/language-switcher.ts:47</a></div>
                         </td>
                     </tr>
 
@@ -346,6 +346,51 @@ from the list of available languages.</p>
                         </div>
                             <div class="io-description">
                                 <p>The current language entity.</p>
+
+                            </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="getLanguageList"></a>
+                    <span class="name">
+                            <span class="modifier">Public</span>
+                        <span ><b>getLanguageList</b></span>
+                        <a href="#getLanguageList"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+                        <span class="modifier-icon icon ion-ios-reset"></span>
+                    <code>getLanguageList()</code>
+                </td>
+            </tr>
+
+
+                    <tr>
+                        <td class="col-md-4">
+                            <div class="io-line">Defined in <a href="" data-line="56"
+                                    class="link-to-prism">src/app/shared/components/language-switcher/language-switcher.ts:56</a></div>
+                        </td>
+                    </tr>
+
+
+            <tr>
+                <td class="col-md-4">
+                        <div class="io-description"><p>Gets the full list of available languages from the service.</p>
+</div>
+
+                        <div class="io-description">
+                            <b>Returns : </b>        <code><a href="../classes/Language.html" target="_self" >Language[]</a></code>
+
+                        </div>
+                            <div class="io-description">
+                                <p>An array of <code>Language</code> objects.</p>
 
                             </div>
                 </td>
@@ -374,8 +419,8 @@ from the list of available languages.</p>
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="66"
-                                    class="link-to-prism">src/app/shared/components/language-switcher/language-switcher.ts:66</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="67"
+                                    class="link-to-prism">src/app/shared/components/language-switcher/language-switcher.ts:67</a></div>
                         </td>
                     </tr>
 
@@ -468,39 +513,6 @@ Updates the language in the service and updates the label.</p>
 
         </tbody>
     </table>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="languageList"></a>
-                    <span class="name">
-                            <span class="modifier">Protected</span>
-                        <span ><b>languageList</b></span>
-                        <a href="#languageList"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <i>Type : </i>        <code><a href="../classes/Language.html" target="_self" >Language[]</a></code>
-
-                    </td>
-                </tr>
-                    <tr>
-                        <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="38" class="link-to-prism">src/app/shared/components/language-switcher/language-switcher.ts:38</a></div>
-                        </td>
-                    </tr>
-
-            <tr>
-                <td class="col-md-4">
-                    <div class="io-description"><p>List of available languages.</p>
-</div>
-                </td>
-            </tr>
-
-        </tbody>
-    </table>
 </section>
 
 </div>
@@ -540,19 +552,11 @@ export class LanguageSwitcher {
   protected label: string;
 
   /**
-   * List of available languages.
-   * @protected
-   * @type {Language[]}
-   */
-  protected languageList: Language[];
-
-  /**
    * Creates an instance of LanguageSwitcher.
    *
    * @param {LanguageService} languageService - Service to manage languages.
    */
   constructor(private languageService: LanguageService) {
-    this.languageList &#x3D; this.languageService.getLanguages();
     this.label &#x3D; this.languageService.getCurrentLanguage().getName();
   }
   
@@ -565,6 +569,15 @@ export class LanguageSwitcher {
     return this.languageService.getCurrentLanguage();
   }
   
+  /**
+   * Gets the full list of available languages from the service.
+   *
+   * @returns {Language[]} An array of &#x60;Language&#x60; objects.
+   */
+  public getLanguageList(): Language[] {
+    return this.languageService.getLanguages();
+  }
+
   /**
    * Handler invoked when a language is selected from the UI.
    * Updates the language in the service and updates the label.
@@ -589,7 +602,7 @@ export class LanguageSwitcher {
 &lt;/button&gt;
 &lt;!-- Menu --&gt;
 &lt;mat-menu #menu&#x3D;&quot;matMenu&quot;&gt;
-  @for (lang of languageList; track lang.getId()) {
+  @for (lang of getLanguageList(); track lang.getId()) {
     &lt;button mat-menu-item
       (click)&#x3D;&quot;setLanguage(lang)&quot;
       [disabled]&#x3D;&quot;getActiveLanguage() &#x3D;&#x3D;&#x3D; lang&quot; &gt;
@@ -630,7 +643,7 @@ export class LanguageSwitcher {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><!-- This corresponds the Boundary Object: "Language Button" (model domain) --><!-- Language Menu Trigger --><button matButton [matMenuTriggerFor]="menu">  <mat-icon aria-hidden="false" aria-label="language icon" fontIcon="language"></mat-icon>  {{ label }}</button><!-- Menu --><mat-menu #menu="matMenu">  @for (lang of languageList; track lang.getId()) {    <button mat-menu-item      (click)="setLanguage(lang)"      [disabled]="getActiveLanguage() === lang" >      <mat-grid-list cols="4">        <mat-grid-tile [colspan]="1" [rowspan]="1" class="flag">{{ lang.getFlag() }}</mat-grid-tile>        <mat-grid-tile [colspan]="3" [rowspan]="1">{{ lang.getName() }}</mat-grid-tile>      </mat-grid-list>    </button>  } @empty {    <button mat-menu-item disabled>No languages available</button>  }</mat-menu></div>'
+        var COMPONENT_TEMPLATE = '<div><!-- This corresponds the Boundary Object: "Language Button" (model domain) --><!-- Language Menu Trigger --><button matButton [matMenuTriggerFor]="menu">  <mat-icon aria-hidden="false" aria-label="language icon" fontIcon="language"></mat-icon>  {{ label }}</button><!-- Menu --><mat-menu #menu="matMenu">  @for (lang of getLanguageList(); track lang.getId()) {    <button mat-menu-item      (click)="setLanguage(lang)"      [disabled]="getActiveLanguage() === lang" >      <mat-grid-list cols="4">        <mat-grid-tile [colspan]="1" [rowspan]="1" class="flag">{{ lang.getFlag() }}</mat-grid-tile>        <mat-grid-tile [colspan]="3" [rowspan]="1">{{ lang.getName() }}</mat-grid-tile>      </mat-grid-list>    </button>  } @empty {    <button mat-menu-item disabled>No languages available</button>  }</mat-menu></div>'
     var COMPONENTS = [{'name': 'App', 'selector': 'app-root'},{'name': 'LanguageSwitcher', 'selector': 'app-language-switcher'},{'name': 'ThemeSwitcher', 'selector': 'app-theme-switcher'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'LanguageSwitcher'};
